# cd-protocol

./: library.json  pyproject.toml
docs/: architecture.md  firmware_lifecycle.md  protocol_spec_v0.2.md
src/c/: headunit_protocol.h
src/python/cd_protocol/: __init__.py
